Locale (BY): Cookie splash
Ўсім прывiтанне з вамi Данiiл Мыслiвец сёння мы пафiксiм пераклад хайповага сайту опэнўкантакце (опенвконтакте (опенвк (openVK (ОVK (ОВК ( О (о) (°)))))))

--- a/locales/by.strings
+++ b/locales/by.strings
@@ -470,3 +470,7 @@
 "comment" = "Каментарый";
 "sender" = "Адпраўнік";
 
+/* Cookies pop-up */
+
+"cookies_popup_content" = "Усе хлопчыкi любяць пэчыва, таму гэты вэб-сайт выкарыстоўвае Cookies для таго, каб ідэнтыфікаваць вашу сесію і нічога болей. Звяртайцеся да нашай <a href='/privacy'>палiтыкi канфiдэнцыальнастi</a> для палучэння поўнай iнфармацыi.";
+"cookies_popup_agree" = "Прынiмаю";
