Global: Add alerts for air raids in Ukraine

--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -1028,3 +1028,10 @@
 
 "cookies_popup_content" = "Все дети любят печенье, поэтому этот веб-сайт использует Cookies для того, чтобы идентифицировать вашу сессию и ничего более. Ознакомьтесь с нашей <a href='/privacy'>политикой конфиденциальности</a> для получения дополнительной информации.";
 "cookies_popup_agree" = "Согласен";
+
+/* Ukraine air raids alerts */
+
+"air_raid_alerts" = "Уведомления о воздушных тревогах в Украине";
+"air_raid_alert" = "Тревога";
+"go_to_the_shelter" = "Пройдите в укрытие!";
+"ukrainian_state" = "Область";
