--- a/locales/en.strings
+++ b/locales/en.strings
@@ -977,3 +977,10 @@
 
 "cookies_popup_content" = "All kids love cookie, so this website uses Cookies to identify your session and nothing more. Check <a href='/privacy'>our privacy policy</a> for more information.";
 "cookies_popup_agree" = "Accept";
+
+/* Ukraine air raids alerts */
+
+"air_raid_alerts" = "Ukraine air raid alert notifications";
+"air_raid_alert" = "Alert";
+"go_to_the_shelter" = "Go to the shelter!";
+"ukrainian_state" = "State";
