Global: Add toggle home page between My Page and My Feed The switch is in the interface settings. Closes #361

--- a/locales/en.strings
+++ b/locales/en.strings
@@ -463,6 +463,7 @@
 "ui_settings_view_of_posts" = "View of posts";
 "ui_settings_view_of_posts_old" = "Old";
 "ui_settings_view_of_posts_microblog" = "Microblog";
+"ui_settings_main_page" = "Main page";
 
 "additional_links" = "Additional links";
 "ad_poster" = "Ad poster";
