--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -491,6 +491,7 @@
 "ui_settings_view_of_posts" = "Вид постов";
 "ui_settings_view_of_posts_old" = "Старый";
 "ui_settings_view_of_posts_microblog" = "Микроблог";
+"ui_settings_main_page" = "Главная страница";
 
 "additional_links" = "Дополнительные ссылки";
 "ad_poster" = "Рекламный плакат";
