--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -190,6 +190,8 @@
 "open_post" = "Открыть запись";
 "version_incompatibility" = "Не удалось отобразить это вложение. Возможно, база данных несовместима с текущей версией OpenVK.";
 
+"graffiti" = "Граффити";
+
 "reply" = "Ответить";
 
 /* Friends */
