--- a/locales/en.strings
+++ b/locales/en.strings
@@ -1,4 +1,5 @@
 "__locale" = "en_US.UTF-8;Eng";
+"__transNames" = "Latin";
 
 /* Check for https://www.unicode.org/cldr/charts/latest/supplemental/language_plural_rules.html */
 
