locales: Kazakh: fix some strings again

--- a/locales/kk.strings
+++ b/locales/kk.strings
@@ -844,7 +844,7 @@
 
 "admin" = "Админ-панель";
 
-"admin_ownerid" = "Иесіеің ID-сі";
+"admin_ownerid" = "Иесінің ID-сі";
 "admin_author" = "Авторы";
 "admin_name" = "Аты";
 "admin_title" = "Тақырыбы";
@@ -959,13 +959,13 @@
 "close" = "Жабу";
 
 "warning" = "Назар аударыңыз";
-"question_confirm" = "Бұл әрекетті болдырмауға мүмкін емес. Шынымен осы әрекетті жасауға сенімдісіз бе?";
+"question_confirm" = "Бұл әрекетті болдырмауға мүмкін емес. Шынымен орындағыңыз келе ме?";
 
 /* User alerts */
 
-"user_alert_scam" = "Бұл пайдаланушы алаяқтық туралы көп хабарланды. Әсіресе ол ақша сұраса сақ болыңыз.";
+"user_alert_scam" = "Бұл пайдаланушыдан алаяқтық көп хабарланды. Әсіресе ол ақша сұраса сақ болыңыз.";
 
 /* Cookies pop-up */
 
-"cookies_popup_content" = "Барлық балалар пішінә жеуді ұнатады, сондықтан бұл веб-сайт тек сіздің сессиянызды анықтау үшін cookie файлдарын пайдаланады. Қосымша ақпарат алу үшін біздің <a href='/privacy'>құпиялық саясатымызды</a> оқыңыз.";
+"cookies_popup_content" = "Барлық балалар пішінә жеуді ұнатады, сондықтан бұл веб-сайт тек сіздің сессияңызды анықтау үшін cookie файлдарын пайдаланады. Қосымша ақпарат алу үшін біздің <a href='/privacy'>құпиялық саясатымызды</a> оқыңыз.";
 "cookies_popup_agree" = "Келісемін";
