User: Actually transliterate names to latin for en
Resolves #580

--- a/locales/en.strings
+++ b/locales/en.strings
@@ -1,5 +1,5 @@
 "__locale" = "en_US.UTF-8;Eng";
-"__transNames" = "Latin";
+"__transNames" = "Russian-Latin/BGN; Any-Latin";
 
 /* Check for https://www.unicode.org/cldr/charts/latest/supplemental/language_plural_rules.html */
 
