--- a/locales/en.strings
+++ b/locales/en.strings
@@ -728,6 +728,18 @@
 "ec_2" = "If for some reason you don't get the mail, check your spam folder. If you don't find the email there, you can resend it.";
 "ec_resend" = "Resend mail";
 
+/* Messages */
+
+"all_messages" = "All messages";
+
+"search_messages" = "Search messages";
+"no_messages" = "No one has written to you yet.";
+"messages_blocked" = "Unfortunately, your message cannot be sent due to this user's privacy settings.";
+"enter_message" = "Enter message";
+
+"messages_error_1" = "Message not delivered";
+"messages_error_1_description" = "There was a general error in sending this message...";
+
 /* Discussions */
 
 "discussions" = "Discussions";
