--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -769,6 +769,18 @@
 "ec_2" = "Если по каким-то причинам вам не пришло письмо, то проверьте папку Спам. Если письма не окажется и там, то вы можете переотправить письмо.";
 "ec_resend" = "Переотправить письмо";
 
+/* Messages */
+
+"all_messages" = "Все сообщения";
+
+"search_messages" = "Поиск сообщений";
+"no_messages" = "Никто Вам не писал, пока что.";
+"messages_blocked" = "Вы не можете отправить сообщение этому пользователю, поскольку он ограничил круг лиц, которые могут присылать ему сообщения.";
+"enter_message" = "Введите сообщение";
+
+"messages_error_1" = "Сообщение не доставлено";
+"messages_error_1_description" = "При отправке этого сообщения произошла ошибка общего характера...";
+
 /* Discussions */
 
 "discussions" = "Обсуждения";
