locales: Kazakh: update&fix strings

--- a/locales/kk.strings
+++ b/locales/kk.strings
@@ -19,7 +19,7 @@
 "forgot_password" = "Құпиясөзіңізді ұмыттыңыз ба?";
 
 "login_failed" = "Жүйеге кіру сәтті аяқталмады";
-"invalid_username_or_password" = "Қолданушы аты немесе құпиясөз дұрыс емес.<a href='/restore'>Құпиясөзді ұмыттыңыз ба?</a>";
+"invalid_username_or_password" = "Пайдаланушы аты немесе құпиясөз дұрыс емес.<a href='/restore'>Құпиясөзді ұмыттыңыз ба?</a>";
 
 "failed_to_register" = "Жүйеге тіркелу сәтті аяқталмады";
 "referral_link_invalid" = "Реферал сілтемесі жарамсыз.";
@@ -53,7 +53,7 @@
 "register_referer_meta_title" = "$1 сізді $2 желіне шақырады!";
 "register_referer_meta_desc" = "$1 және одан көп пайдаланушылармен $2 желісінде қосылыңыз!";
 
-"users" = "Қолданушылар";
+"users" = "Пайдаланушылар";
 
 /* Profile information */
 
@@ -104,7 +104,9 @@
 "relationship_7" = "Барлығы күрделі";
 "relationship_8" = "Белсенді іздеуде";
 
-"politViews" = "Саяси көзқ-тар";
+"relationship_1_fem" = "Тұрмыс құрмаған";
+
+"politViews" = "Саяси көзқарастар";
 
 "politViews_0" = "Таңдалмаған";
 "politViews_1" = "Бейтарап";
@@ -136,9 +138,9 @@
 "favorite_quotes" = "Сүйікті дәйексөздер";
 "information_about" = "Өзі туралы";
 
-"updated_at" = "Соңғы жаңартылған: $1";
+"updated_at" = "Соңғы жаңартылған күні: $1";
 
-"user_banned" = "Өкінішке орай біз <b>$1</b> қолданушының парақшасың блоктауға мәжбүр болдық.";
+"user_banned" = "Өкінішке орай біз <b>$1</b> пайдаланушының парақшасың блоктауға мәжбүр болдық.";
 "user_banned_comment" = "Модератордың пікірі:";
 
 /* Wall */
@@ -396,7 +398,7 @@
 "repeat_password" = "Қайталап жазыңызшы";
 
 "avatars_style" = "Аватарлардың стилі";
-"style" = "Стилі";
+"style" = "Стильдер";
 
 "default" = "әдепкі";
 
@@ -549,7 +551,7 @@
 "privacy_setting_write_messages" = "Кім маған хабарма жібере алады";
 "privacy_value_anybody" = "Әркім";
 "privacy_value_anybody_dative" = "Әркім";
-"privacy_value_users" = "OpenVK қолданушылары";
+"privacy_value_users" = "OpenVK пайдаланушылары";
 "privacy_value_friends" = "Достарым";
 "privacy_value_friends_dative" = "Достарым";
 "privacy_value_only_me" = "Мен ғана";
@@ -584,10 +586,15 @@
 "points_amount_other" = "$1 дауыс";
 
 "transfer_poins" = "Дауыс аудару";
-"transfer_poins_button" = "Дауыс аудары";
+"transfer_poins_button" = "Дауыс аудару";
 "also_you_can_transfer_points" = "Сонымен қатар сіз басқа адамға <a href=\"javascript:showCoinsTransferDialog($1, '$2')\">дауыс аудара аласыз</a>.";
 
 "transferred_to_you" = "сізге аударды";
+
+"transfer_trough_ton" = "TON-мен толтыру";
+"transfer_ton_contents" = "Сіз TON криптовалютасымен балансыңызды толтыра аласыз. Tonkeeper қолданбасымен QR-кодты сканерлеу немесе реквизиттерге сәйкес TON-ды қолмен жіберу жеткілікті. Бірнеше минут ішінде сізге белгілі бір дауыс саны келеді.";
+"transfer_ton_address" = "<b>Әмиян мекенжайы:</b> $1<br/><b>Хабарлама мазмұны:</b> $2";
+"transfer_ton_currency_per_ton" = "$1 TON";
 
 "receiver_address" = "Қабылдаушы мекенжайы";
 "coins_count" = "Дауыстардың саны";
@@ -698,13 +705,13 @@
 
 "invite" = "Шақыру";
 "you_can_invite" = "Сіз желіге достарыңызды немесе танысқандарыңызды осы индивидуал сілтемемен шақыра аласыз:";
-"you_can_invite_2" = "Осы сілтемені постыңызға тіркеңіз. Қолданушы желіге тіркелгенде ол бірден сіздің достарыңызға қосылады.";
+"you_can_invite_2" = "Осы сілтемені постыңызға тіркеңіз. Пайдаланушы желіге тіркелгенде ол бірден сіздің достарыңызға қосылады.";
 
 /* Banned */
 
 "banned_title" = "Сізді верискок жазалады";
 "banned_header" = "Сіз әлеуметтік желіде блокталғансыз";
-"banned_alt" = "Бұл қолданушы блокталған.";
+"banned_alt" = "Бұл пайдаланушы блокталған.";
 "banned_1" = "Кешіріңіз, <b>$1</b>, бірақ сіз әлеуметтік желіден блокталған болдыңыз.";
 "banned_2" = "Мұның себебі қарапайым: <b>$1</b>. Өкінішке орай, осы жолы сізді мәңгілікке блоктауға мәжбүр болдық.";
 "banned_3" = "Егер сізді қателесіп блоктады деп ойласаңыз, <a href=\"/support?act=new\">қолдау қызметіне жаза аласыз</a> немесе <a href=\"/logout?hash=$1\">жүйеден шыға аласыз</a>.";
@@ -716,6 +723,20 @@
 "ec_1" = "<b>$1</b>, тіркелуіңіз аяқталуға жақын. Бірнеше минуттан кейін электрондық поштаңызға растау сілтемесі бар хат келуі керек.";
 "ec_2" = "Егер қандай да бір себептермен хат келмесе, спам қалтасын тексеріңіз. Хатты ол жерден таппасаңыз, оны қайта жіберуге болады.";
 "ec_resend" = "Қайта жіберу";
+
+/* Messages */
+
+"all_messages" = "Барлық хабарламалар";
+
+"search_messages" = "Хабарламалар іздеу";
+"no_messages" = "Әзірше сізге ешкім жазбады.";
+"messages_blocked" = "Сіз жазғыңыз келген пайдаланушы хабарлама жібере алатын тұлғалардың шеңберіне шектеу қойған, сондықтан сіз оған хабарлама жібере алмайсыз.";
+"enter_message" = "Хабарлама жазыңыз";
+
+"messages_error_1" = "Хабарлама жіберілмеді";
+"messages_error_1_description" = "Осы хабарламаны жіберу кезінде жалпы қате орын алды...";
+
+
 
 /* Discussions */
 
@@ -762,7 +783,7 @@
 "error_1" = "Дұрыс емес сұрау";
 "error_2" = "Логин немесе құпиясөз дұрыс емес";
 "error_3" = "Рұқсат етілмеген";
-"error_4" = "Қолданушы жоқ";
+"error_4" = "Пайдаланушы жоқ";
 "information_-1" = "Операция сәтті аяқталды";
 "information_-2" = "Жүйеге кіру сәтті аяқталды";
 
@@ -780,7 +801,7 @@
 "error_data_too_big" = "'$1' осылардан ұзағырақ болмауы керек: $2 $3";
 
 "forbidden" = "Рұқсат қателігі";
-"forbidden_comment" = "Бұл қолданушының құпиялық баптаулары сізге осы парақты қарауға рұқсат бермейді";
+"forbidden_comment" = "Бұл пайдаланушының құпиялық баптаулары сізге осы парақты қарауға рұқсат бермейді";
 
 "changes_saved" = "Өзгерістер сақталды";
 "changes_saved_comment" = "Сіздің парақшаңызда жаңа деректер пайда болады";
@@ -834,11 +855,11 @@
 "login_as" = "$1 ретінде кіру";
 "manage_user_action" = "Пайдаланушыны басқару";
 "manage_group_action" = "Топты басқару";
-"ban_user_action" = "Пайдаланушыға тыйым салу";
-"unban_user_action" = "Тыйым салуды болдырмау";
+"ban_user_action" = "Блокқа салу";
+"unban_user_action" = "Блоктан шығару";
 "warn_user_action" = "Пайдаланушыны ескерту";
-"ban_in_support_user_action" = "Жәрдемде тыйым салу";
-"unban_in_support_user_action" = "Жәрдемде тыйым салуды болдырмау";
+"ban_in_support_user_action" = "Жәрдемде блоктау";
+"unban_in_support_user_action" = "Жәрдемде блоктан шығару";
 
 /* Admin panel */
 
