--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -488,12 +488,13 @@
 
 "profile_deactivate" = "Удаление страницы";
 "profile_deactivate_button" = "Удалить страницу";
-"profile_deactivate_header" = "Пожалуйста, укажите причину удаления вашей страницы";
-"profile_deactivate_reason_1" = "У меня есть другая страница";
+"profile_deactivate_header" = "Мы сожалеем, что Вы хотите удалить свою страницу. Поэтому, Вы можете указать причину удаления и Ваше сообщение по этому поводу. Мы читаем Ваши отзывы и пытаемся сделать сайт лучше!";
+"profile_deactivate_reason_header" = "Пожалуйста, укажите причину удаления Вашей страницы";
+"profile_deactivate_reason_1" = "У меня есть другая страница на сайте";
 "profile_deactivate_reason_1_text" = "Я создал новую страницу и теперь хочу подтереть своё прошлое.";
-"profile_deactivate_reason_2" = "Веб-сайт отнимает у меня слишком много времени";
+"profile_deactivate_reason_2" = "Сайт отнимает у меня слишком много времени";
 "profile_deactivate_reason_2_text" = "Пусть этот сайт хорош и прекрасен, но он отнимает у меня время, которое мне нужно для работы и жизни.";
-"profile_deactivate_reason_3" = "На веб-сайте слишком много неприемлемых материалов";
+"profile_deactivate_reason_3" = "Сайт содержит слишком много неприемлемых материалов";
 "profile_deactivate_reason_3_text" = "Я нашёл достаточно порнографии и пиратского контента - хватит на всю жизнь. Теперь я ухожу.";
 "profile_deactivate_reason_4" = "Меня беспокоит безопасность моих данных";
 "profile_deactivate_reason_4_text" = "За мной следят и мне страшно здесь находится. Извините, я вынужден уйти.";
