Add descriptions to user and club pages

--- a/locales/en.strings
+++ b/locales/en.strings
@@ -1002,3 +1002,8 @@
 
 "cookies_popup_content" = "All kids love cookie, so this website uses Cookies to identify your session and nothing more. Check <a href='/privacy'>our privacy policy</a> for more information.";
 "cookies_popup_agree" = "Accept";
+
+/* SEO */
+"banned_user_seo_description" = "Blocked page, that once belonged to $1.";
+"default_user_seo_cfa" = "Join this and many other users in this social network :3";
+"default_club_seo_cfa" = "Join this and many other clubs in this social network :3";
