--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -1057,3 +1057,8 @@
 
 "cookies_popup_content" = "Все дети любят печенье, поэтому этот веб-сайт использует Cookies для того, чтобы идентифицировать вашу сессию и ничего более. Ознакомьтесь с нашей <a href='/privacy'>политикой конфиденциальности</a> для получения дополнительной информации.";
 "cookies_popup_agree" = "Согласен";
+
+/* SEO */
+"banned_user_seo_description" = "Заблокированная страница пользователя $1";
+"default_user_seo_cfa" = "Присоединяйтесь к этому и другим пользователям данной соцсети :3";
+"default_club_seo_cfa" = "Присоединяйтесь к этому и другим сообществам в данной соцсети :3";
