--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -47,7 +47,7 @@
 "registration_closed" = "Регистрация закрыта.";
 "invites_you_to" = "<strong>$1</strong> приглашает вас в $2";
 
-"register_meta_desc" = "Зарегистрируйтесь в $1 прямо сейчас!";
+"register_meta_desc" = "Зарегистрируйтесь прямо сейчас и присоеденитесь к пользователям $1 и прикольным активностям, в которых они здесь учавствуют.";
 "register_referer_meta_title" = "$1 приглашает вас в $2!";
 "register_referer_meta_desc" = "Присоединяйтесь к $1 и множеству других пользователей в $2!";
 
