Feed: Redesign news a little bit The global news switch is now more prominent, as it has become a tab. Also, the switch for number of posts per page now looks nicer.

--- a/locales/en.strings
+++ b/locales/en.strings
@@ -168,6 +168,7 @@
 
 "no_comments" = "No comments";
 
+"my_news" = "My news";
 "all_news" = "All news";
 "posts_per_page" = "Number of posts per page";
 
