--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -176,6 +176,7 @@
 
 "no_comments" = "Комментарии отсутствуют";
 
+"my_news" = "Мои новости";
 "all_news" = "Все новости";
 "posts_per_page" = "Количество записей на странице";
 
