Typo fix in 'changes_saved_comment'
Resolves issue #597.

--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -859,7 +859,7 @@
 "forbidden_comment" = "Настройки приватности этого пользователя не разрешают вам смотреть на его страницу.";
 
 "changes_saved" = "Изменения сохранены";
-"changes_saved_comment" = "Новый данные появятся на вашей странице";
+"changes_saved_comment" = "Новые данные появятся на вашей странице";
 
 "photo_saved" = "Фотография сохранена";
 "photo_saved_comment" = "Новое изображние профиля появится у вас на странице";
