locales: Kazakh: Update and fix strings

--- a/locales/kk.strings
+++ b/locales/kk.strings
@@ -9,7 +9,7 @@
 "home" = "Басты бет";
 "welcome" = "Қош келдіңіз!";
 
-"to_top" = "Жоғарыға";
+"to_top" = "Жоғары";
 
 /* Login */
 
@@ -171,6 +171,7 @@
 
 "no_comments" = "Пікірлер жоқ";
 
+"my_news" = "Жаңалықтарым";
 "all_news" = "Барлық жаңалықтар";
 "posts_per_page" = "Бір беттегі жазбалар саны";
 
@@ -239,11 +240,11 @@
 "group_managers" = "Менеджерлер";
 "group_type" = "Топтың типі";
 "group_type_open" = "Бұл ашық топ, яғни оған әркім кіре алады.";
-"group_type_closed" = "Бұл жабық топ, кіру үшін өтінім жазуыңыз қажет.";
+"group_type_closed" = "Бұл жабық топ, оған кіру үшін өтінім жазуыңыз қажет.";
 "creator" = "Құрған";
 "administrators" = "Әкімшілер";
-"add_to_left_menu" = "Сол жақтағы менюге қосу";
-"remove_from_left_menu" = "Сол жақтағы менюден алу";
+"add_to_left_menu" = "Сол жақтағы мәзірге қосу";
+"remove_from_left_menu" = "Сол жақтағы мәзірден алу";
 "all_followers" = "Барлық жазылмандар";
 "only_administrators" = "Тек әкімшілер";
 "website" = "Сайт";
@@ -269,21 +270,21 @@
 "group_display_all_administrators" = "Барлық әкімшілерді көрсету";
 "group_dont_display_administrators_list" = "Ештеңе көрсетпеу";
 
-"group_changeowner_modal_title" = "Топтың иесі құқықтарың беру";
-"group_changeowner_modal_text" = "Назар аударыңыз! Сіз $1 деп аталатын пайдаланушыға топтың иесі құқықтарын берудесіз. Бұл әрекет қайтымсыз. Бергеннен кейін сіз топтың әкімшісі боласыз, бірақ оның жаңа иесі сізді оңай сол рөлден алып тастай алады.";
-"group_owner_setted" = "Топтың жаңа иесі ($1) $2 тобына сәтті тағайындалды. Сізге топтың әкімші құқықтары берілді. Қайтіп топтың иесі болғыңыз келсе <a href='/support?act=new'>қолдау көрсету тобына</a> жазыңыз.";
+"group_changeowner_modal_title" = "Топ иесі құқықтарың беру";
+"group_changeowner_modal_text" = "Назар аударыңыз! Сіз «$1» деген пайдаланушыға топ иесі құқықтарын берудесіз. Бұл әрекет қайтымсыз. Құқықтар берілгеннен кейін сізге топ әкімші рөлі беріледі, бірақ оның жаңа иесі сізді оңай сол рөлден алып тастай алады.";
+"group_owner_setted" = "Топтың жаңа иесі ($1) «$2» тобына сәтті тағайындалды. Сізге топ әкімші құқықтары берілді. Қайтіп топ иесі болғыңыз келсе <a href='/support?act=new'>қолдау көрсету тобына</a> жазыңыз.";
 
 "participants_zero" = "Қатысушылар жоқ";
 "participants_one" = "$1 қатысушы";
 "participants_other" = "$1 қатысушы";
 
-"groups_zero" = "Топтар жоқ";
+"groups_zero" = "Топ жоқ";
 "groups_one" = "$1 топ";
 "groups_other" = "$1 топ";
 
-"groups_list_zero" = "Сіз ешқандай топқа қатыспайсыз.";
+"groups_list_zero" = "Сіз ешқандай топқа қатыспағансыз.";
 "groups_list_one" = "Сіз бір топқа қатысасыз";
-"groups_list_other" = "Сіз $1 топтардың қатысушысысыз";
+"groups_list_other" = "Сіз $1 топқа қатысасыз";
 
 "meetings_zero" = "Кездесулер жоқ";
 "meetings_one" = "$1 кездесу";
@@ -293,7 +294,7 @@
 "open_group_desc" = "Өзіңізге сай топ таба алмай жүрсіз бе? Өзіңіз ашып алыңыз!";
 "search_group" = "Топ іздеу";
 "search_by_groups" = "Топтардан іздеу";
-"search_group_desc" = "Мұнда сіз бар топтарға шолу жасай аласыз және қажеттіліктеріңізге сай топты таңдай аласыз...";
+"search_group_desc" = "Мұнда сіз бар топтарға шолу жасай аласыз және қажеттіліктеріңізге сай топты таңдай аласыз.";
 
 /* Albums */
 
@@ -311,9 +312,13 @@
 "avatar_album" = "Парақшамдағы фотолар";
 "wall_album" = "Қабырғамдағы фотолар";
 
-"albums_zero" = "Альбомдар жоқ";
+"albums_zero" = "Альбом жоқ";
 "albums_one" = "$1 альбом";
 "albums_other" = "$1 альбом";
+
+"albums_list_zero" = "Сізде ешқандай альбом жоқ";
+"albums_list_one" = "Сізде бір альбом бар";
+"albums_list_other" = "Сізде $1 альбом бар";
 
 /* Notes */
 
@@ -327,9 +332,9 @@
 "feed" = "Жаңалықтар";
 "publish_post" = "Жазба қосу";
 
-"edited" = "Өнделген";
+"edited" = "Өнделген күні:";
 
-"notes_zero" = "Жолжазбалар жоқ";
+"notes_zero" = "Жолжазба жоқ";
 "notes_one" = "$1 жолжазба";
 "notes_other" = "$1 жолжазба";
 "notes_start_screen" = "Жолжазбалар арқылы оқиғаларды достарыңызбен бөлісуге және олармен не болып жатқанын көруге болады.";
@@ -345,12 +350,12 @@
 "edit_button" = "өңдеу";
 "my_page" = "Парақшам";
 "my_friends" = "Достарым";
-"my_photos" = "Фотоларым";
-"my_videos" = "Видеожазбаларым";
+"my_photos" = "Суреттерім";
+"my_videos" = "Бейнежазбаларым";
 "my_messages" = "Хабарламаларым";
 "my_notes" = "Жолжазбаларым";
 "my_groups" = "Топтарым";
-"my_feed" = "Жаңалықтарым";
+"my_feed" = "Жаңалықтар";
 "my_feedback" = "Жауаптарым";
 "my_settings" = "Баптауларым";
 "bug_tracker" = "Баг-ұстаушы";
@@ -361,7 +366,7 @@
 
 "header_home" = "басты бет";
 "header_groups" = "топтар";
-"header_donate" = "қайырымдылық жасау";
+"header_donate" = "донат";
 "header_people" = "кісілер";
 "header_invite" = "шақыру";
 "header_help" = "көмек";
@@ -371,7 +376,7 @@
 "header_login" = "кіру";
 "header_registration" = "тіркелу";
 
-"left_menu_donate" = "Қайырымдылық жасау";
+"left_menu_donate" = "Донат";
 
 "footer_about_instance" = "инстанция туралы";
 "footer_blog" = "блог";
@@ -392,9 +397,9 @@
 
 "picture" = "Сурет";
 
-"change_password" = "Құпиясөз өзгерту";
-"old_password" = "Бұрынғы құпиясөз";
-"new_password" = "Жаңа құпиясөз";
+"change_password" = "Құпия сөзді өзгерту";
+"old_password" = "Бұрынғы құпия сөз";
+"new_password" = "Жаңа құпия сөз";
 "repeat_password" = "Қайталап жазыңызшы";
 
 "avatars_style" = "Аватарлардың стилі";
@@ -462,7 +467,7 @@
 "code" = "Код";
 "2fa_code" = "2FA код";
 
-"incorrect_password" = "Құпиясөз дұрыс емес";
+"incorrect_password" = "Құпия сөз дұрыс емес";
 "incorrect_code" = "Код дұрыс емес";
 "incorrect_2fa_code" = "Екі факторлы аутентификацияның коды дұрыс емес";
 "two_factor_authentication_enabled_message" = "Екі факторлы аутентификация қосулы";
@@ -472,8 +477,8 @@
 "view_backup_codes" = "Сақтық көшірме кодтарын көру";
 "backup_codes" = "Кіруді растауға арналған сақтық көшірме кодтары";
 "two_factor_authentication_backup_codes_1" = "Сақтық көшірме кодтары телефонға кіру мүмкіндігіңіз болмаған кезде, мысалы, саяхат кезінде парақшаға кіруге растауға мүмкіндік береді.";
-"two_factor_authentication_backup_codes_2" = "Сізде тағы <b>10 код</b> бар, әр кодты тек бір рет пайдалануға болады. Оларды басып шығарыңыз, қауіпсіз жерге қойыңыз және кіруіңізді растау үшін кодтар қажет болғанда пайдаланыңыз.";
-"two_factor_authentication_backup_codes_3" = "Таусылған жағдайда жаңа кодтарды алуға болады. Соңғы жасалған сақтық көшірме кодтары ғана жарамды.";
+"two_factor_authentication_backup_codes_2" = "Сізде тағы <b>10 код</b> бар, әр кодты тек бір рет пайдалануға болады. Оларды басып шығарыңыз да қауіпсіз жерге қойыңыз. Кіруіңізді растағанда кодтар қажет болғанда пайдаланыңыз.";
+"two_factor_authentication_backup_codes_3" = "Таусылған жағдайда жаңа кодтар алуға болады. Тек соңғы жасалған сақтық көшірме кодтар жарамды.";
 
 
 /* Sorting */
@@ -484,9 +489,9 @@
 
 /* Videos */
 
-"videos" = "Видеожазбалар";
-"video" = "Видеожазба";
-"upload_video" = "Видеожазба жүктеу";
+"videos" = "Бейнежазбалар";
+"video" = "Бейнежазба";
+"upload_video" = "Бейнежазба жүктеу";
 "video_uploaded" = "Жүктелді";
 "video_updated" = "Жаңартылды";
 "video_link_to_yt" = "YT сілтеме";
@@ -496,9 +501,9 @@
 "info_uploaded_by" = "Жүктеген:";
 "info_upload_date" = "Жүктелген күні";
 
-"videos_zero" = "Видеожазбалар жоқ";
-"videos_one" = "$1 видеожазба";
-"videos_other" = "$1 видеожазба";
+"videos_zero" = "Бейнежазбалар жоқ";
+"videos_one" = "$1 бейнежазба";
+"videos_other" = "$1 бейнежазба";
 
 /* Notifications */
 
@@ -512,15 +517,15 @@
 "notifications_under_note" = "сіздің $3жолжазбаңызға$4";
 "notifications_under_photo" = "сіздің $3фотоңызға$4";
 "notifications_under_post" = "сіздің $5 жазған $3жазбаңызға$4";
-"notifications_under_video" = "сіздің $3видеожазбаңызға$4";
+"notifications_under_video" = "сіздің $3бейнеңізге$4";
 "notifications_post" = "$1 сіздің қабырғаңызға $2жазба$3 қойды: $4";
-"notifications_appoint" = "$1 сізді қоғамның менеджері етіп тағайындады $2";
+"notifications_appoint" = "$1 $2 сізді топтың менеджері етіп тағайындады";
 
 "nt_liked_yours" = "ұнатты";
 "nt_shared_yours" = "бөлісті";
 "nt_commented_yours" = "пікір жазды";
 "nt_written_on_your_wall" = "сіздің қабырғаңызға жазды";
-"nt_made_you_admin" = "сізді қоғамда тағайындады";
+"nt_made_you_admin" = "сізді топта тағайындады";
 
 "nt_from" = "";
 "nt_yours_adjective" = "сіздің";
@@ -543,7 +548,7 @@
 "privacy_setting_read_info" = "Кім менің парақшамдағы басты ақпаратты көре алады";
 "privacy_setting_see_groups" = "Кім менің топтарым мен кездесулерімді көре алады";
 "privacy_setting_see_photos" = "Кім менің фотоларымды көре алады";
-"privacy_setting_see_videos" = "Кім менің видеожазбаларымды көре алады";
+"privacy_setting_see_videos" = "Кім менің бейнежазбаларымды көре алады";
 "privacy_setting_see_notes" = "Кім менің жолжазбаларымды көре алады";
 "privacy_setting_see_friends" = "Кім менің достарларымды көре алады";
 "privacy_setting_add_to_friends" = "Кім мені достарыма қоса алады";
@@ -781,7 +786,7 @@
 /* Errors */
 
 "error_1" = "Дұрыс емес сұрау";
-"error_2" = "Логин немесе құпиясөз дұрыс емес";
+"error_2" = "Логин немесе құпия сөз дұрыс емес";
 "error_3" = "Рұқсат етілмеген";
 "error_4" = "Пайдаланушы жоқ";
 "information_-1" = "Операция сәтті аяқталды";
@@ -794,8 +799,8 @@
 "error_shorturl" = "Бұл мекенжай бос емес.";
 "error_segmentation" = "Сегментация қателігі";
 "error_upload_failed" = "Фотосурет жүктелмеді";
-"error_old_password" = "Бұрынғы құпиясөз сәйкес келмейді";
-"error_new_password" = "Жаңа құпиясөз сәйкес келмейді";
+"error_old_password" = "Бұрынғы құпия сөз сәйкес келмейді";
+"error_new_password" = "Жаңа құпия сөз сәйкес келмейді";
 "error_shorturl_incorrect" = "Мекенжайдың форматы дұрыс емес.";
 "error_repost_fail" = "Жазбамен бөлісу мүмкін болмады";
 "error_data_too_big" = "'$1' осылардан ұзағырақ болмауы керек: $2 $3";
